modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ServiceWithoutResourceParams.bal
package samples.parser;

service HelloService {

  @Path ("/tweet")
  resource tweet {
      int b;
      reply m;
  }
}
